feat: publish balance change events to Mule
